# artemide

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Specifications  docker-compose.yml  pyproject.toml
chats/: chat1.md  chat2.md  chat3.md  chat4.md  chat5.md  chat6.md  chat7.md
docs/: PROMPTS_v1.2.md  SPEC_v1.2.md  deployment.md  operations.md  smoke-test.md  troubleshooting.md
migrations/: 001_initial_schema.sql  002_audit_log.sql  003_notes.sql  004_search_index.sql  005_idempotency_keys.sql  006_partner_follow_ups.sql  007_audit_log_transport_rest.sql  008_system_config.sql  009_partner_location_introduced_via.sql  010_headhunter_fields.sql  011_outreach_workspace.sql  012_organisations.sql  013_engagements.sql  014_engagement_profile.sql  015_messages.sql  016_events_outbox.sql  017_programme_milestones.sql  018_api_tokens.sql  019_alter_notes_entity_types.sql  020_alter_contact_log_engagement.sql  021_search_index_v2.sql  022_audit_log_v12_actions.sql  023_perf_indexes.sql  024_contact_log_dedup_initiator.sql  025_compensation_scenarios.sql  026_attachments.sql  026_interviews.sql  027_interviews.sql  028_audit_log_v13_actions.sql  029_board_domain.sql  030_board_target.sql  031_board_governance.sql  032_today_feedback.sql  033_identity_intake.sql  034_preparation_notifications.sql
n8n/: 01_radar.json  02_cadence.json  03_inbound_triage.json  04_dossier.json  05_prep_pack.json  06_flywheel.json  07_rollup.json  README.md  sender.json
project/: Audit.html  Dashboard.html  FirmDetail.html  Login.html  PartnerDetail.html  Plan.html  (+1 more)
(+399 files in other folders)
